--- a/static/style.css
+++ b/static/style.css
@@ -1,217 +1,13 @@
-*{
+*
+{
     margin: 0;
     padding: 0;
 }
-
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    background: #000000;
-    color: #999999;
+    background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(images/background.jpg);
+    background-position: center;
+    background-size: cover;
 }
-
-ul{
-    list-style: none;
-}
-
-h1,h2,h3,h4{
-    color: #ffffff;
-}
-
-h3{
-    font-weight: lighter;
-}
-
-a{
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p{
-    margin: 0.5rem 0;
-    font-weight: bold;
-    color: #ffffff;
-}
-
-img{
-    width: 100%;
-}
-
-.showcase{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    background: url("images/background.jpg") no-repeat center center/cover;
-}
-
-.showcase::after{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background: rgba(0, 0, 0, 0.4);
-    box-shadow: 120px 100px 250px #000000 , inset -120px -100px 250px #000000;
-}
-
-.showcase-top{
-    position: relative;
-    z-index: 2;
-    height: 90px;
-}
-
-.showcase-top img{
-    width: 200px;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translate(40% , -50%);
-}
-
-.showcase-top a{
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translate(-60% , -50%);
-}
-
-.showcase-content{
-    position: relative;
-    margin: 0 26%;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    margin-top: 9rem;
-}
-
-.showcase-content h1{
-    font-weight: 700;
-    font-size: 64px;
-    margin: 0 30px;
-    max-width: 800px;
-    line-height: 74.5px;
-}
-
-.showcase-content h3{
-    color: white;
-    font-size: 25px;
-    margin: 16px 0;
-}
-
-.showcase-content p{
-    font-size: 19.2px;
-    font-weight: 300;
-    padding-top: 0.5rem;
-    padding-bottom: 1rem;
-}
-
-.showcase-content input{
-    position: absolute;
-    left: 0;
-    bottom: -8vh;
-    width: 454px;
-    height: 3rem;
-    font-size: 1rem;
-    padding-left: 0.5rem;
-}
-
-.btn{
-    text-decoration: : none !important;
-    border-radius: 50px;
-    padding: 7px 20px;
-    float: right;
-    color: #fff !important;
-    background: #094793;
-    font-weight: 600;
-}
-
-.btn:hover{
-    opacity: 0.9;
-}
-
-.btn-rounded{
-    border-radius: 5px;
-}
-
-.showcase-content .btn-lg{
-    position: absolute;
-    right: 0;
-    bottom: -8vh;
-    padding: 0.5rem 1.2rem;
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    height: 36px;
-    width: 14rem;
-}
-
-
-.input{
-    display: inline-grid;
-    align-items: center;
-    grid-template-columns: 50% 40%;
-}
-
-.category {
-    height: 200px;
-}
-.category span {
-    color: #e5e5e5;
-    font-size: 18px;
-    line-height: 17px;
-    font-weight: 600;
-}
-.slider {
-    margin-top: 0.8rem;
-    display: flex;
-    overflow: hidden;
-    position: absolute;
-    left: 3.75rem;
-    right: 0;
-}
-.slider .movie {
-    min-width: 25.3%;
-}
-.slider .movie img {
-    max-width: 100%;
-    padding-right: 5px;
-    cursor: pointer;
-}
-
-.slider .movie img:hover{
-    transform: translateY(-10px);
-
-}
-
-.footer{
-    max-width: 70%;
-    margin: 1rem auto;
-    overflow: auto;
-}
-
-.footer ,
-.footer a{
-    color: #999999;
-    font-size: 0.9rem;
-}
-
-.footer p{
-    margin-bottom: 1.5rem;
-}
-
-.footer .footer-cols{
-    display: grid;
-    grid-template-columns: repeat(4 , 1fr);
-    grid-gap: 2rem;
-}
-
-.footer li{
-    line-height: 2.4;
-}
-
 .logo{
     width: 300px;
     margin-top: 18px;
@@ -292,3 +88,16 @@ img{
     width: 100%;
     max-width: 800px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
