--- a/static/style.css
+++ b/static/style.css
@@ -52,7 +52,7 @@ img{
     height: 100%;
     z-index: 1;
     background: rgba(0, 0, 0, 0.4);
-    box-shadow: 120px 100px 250px #000000 , inset -120px -100px 250px #000000;
+    box-shadow: 120px 20px 900px #000000 , inset -120px -100px 120px #000000;
 }
 
 .showcase-top{
@@ -155,14 +155,20 @@ img{
     grid-template-columns: 50% 40%;
 }
 
+
 .category {
-    height: 200px;
+	width: 100%;
+	margin: 0 auto;
+	height: 100%;
+	padding: 0 3rem;
+    height: 300px;
 }
 .category span {
     color: #e5e5e5;
     font-size: 18px;
     line-height: 17px;
     font-weight: 600;
+	margin-top: 10% important!; 
 }
 .slider {
     margin-top: 0.8rem;
@@ -176,8 +182,13 @@ img{
     min-width: 19.3%;
 }
 .slider .movie img {
-    max-width: 100%;
+    box-shadow: -7px 7px 7px 0 #111112;
+    max-width: 60%;
     padding-right: 5px;
+    margin-top: 15px;
+    box-shadow: -7px 7px 7px 0 #000000;
+    cursor: pointer;
+    margin-bottom: 100px;
 }
 
 .slider .movie img:hover{
