--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,8 @@
-*
+/* *
 {
 	margin: 0;
 	padding: 0;
-}
+} */
 body{
 	background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(images/background.jpg);
 	background-position: center;
