added fake data, fixed templates, working for demonstrations

--- a/static/templates/recommended.html
+++ b/static/templates/recommended.html
@@ -1,1 +1,6 @@
-<div class = "col-md-2"><img src = "{#recommended#}"></div>
+<div class = "col-md-2">
+    <a href="/watch?{#recommended#}">
+        <img src="posters/poster_{#recommended#}.jpg" title = "{{tittles{#recommended#}}}">
+    </a>
+</div>
+
